[package]
name = "eth-recovery"
version = "0.1.0"
edition = "2021"
authors = ["FuckerKing <Ifuck.Youfuck@fuck.com>"]
description = "Ethereum wallet recovery tool for finding lost passphrases"
license = "MIT"
readme = "README.md"

[dependencies]
bitcoin = "0.32.5"  # Or latest version
bip39 = "1.0.1"
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
dashmap = "5.2"
indicatif = "0.17"
rayon = "1.5"
serde = { version = "1.0.188", features = ["derive"] }
zeroize = "1.5"
ethers = "1.0.0"
secp256k1 = "0.27.0"
hex = "0.4.3"
serde_json = "1.0.94"
base64 = "0.21.0"
